--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch db.json --port 3004",
+    "dev:env": "concurrently \"npm run json-server\" \"npm run dev\" "
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
+    "axios": "^0.27.2",
+    "concurrently": "^7.3.0",
     "ethers": "^5.6.9",
+    "json-server": "^0.17.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
